--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,7 @@
             android:layout_marginTop="10dp"
             app:counterEnabled="true"
             app:counterMaxLength="10"
+            app:prefixText="+91"
             app:startIconDrawable="@drawable/baseline_phone_24"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">
 
@@ -88,6 +89,7 @@
             android:layout_margin="10dp"
             app:counterEnabled="true"
             app:counterMaxLength="10"
+            app:prefixText="+91"
             android:layout_marginTop="10dp"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">
 
