--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,7 +55,7 @@
 
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/Phone1"
+            android:id="@+id/Phone"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -72,6 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLength="10"
+                android:id="@+id/Phone1"
                 android:inputType="phone"
                 android:hint="Enter your phone number"
                 android:maxLines="1"
@@ -80,11 +81,11 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/Phone2"
+            android:id="@+id/PhoneA"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/Phone1"
+            android:layout_below="@+id/Phone"
             app:startIconDrawable="@drawable/baseline_phone_24"
             android:layout_margin="10dp"
             app:counterEnabled="true"
@@ -97,17 +98,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="phone"
+                android:id="@+id/Phone2"
                 android:maxLength="10"
                 android:hint="Enter your alternative phone number"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/email"
+            android:id="@+id/emaillayout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/Phone2"
+            android:layout_below="@+id/PhoneA"
             android:layout_margin="10dp"
             app:startIconDrawable="@drawable/baseline_email_24"
             android:layout_marginTop="10dp"
@@ -117,6 +119,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Enter your email"
+                android:id="@+id/email"
                 android:inputType="textEmailAddress"
                 android:maxLines="1" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -126,7 +129,7 @@
             android:id="@+id/radiobutton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/email"
+            android:layout_below="@id/emaillayout"
             android:layout_margin="10dp"
             android:layout_marginTop="10dp"
             android:background="@drawable/blue_border_rounded_cornwe">
@@ -186,7 +189,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/coding"
+            android:id="@+id/codingLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/hobbies"
@@ -198,6 +201,7 @@
             >
 
             <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/Coding"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -205,20 +209,21 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/readingbook"
+            android:id="@+id/readingbookLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/hobbies"
             android:layout_margin="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:layout_toRightOf="@id/coding"
+            android:layout_toRightOf="@id/codingLayout"
             android:background="@drawable/blue_border_rounded_cornwe"
 
 
             >
 
             <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/readingBook"
                 android:layout_width="130dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -226,20 +231,21 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/playing"
+            android:id="@+id/playingLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/hobbies"
             android:layout_margin="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:layout_toRightOf="@id/readingbook"
+            android:layout_toRightOf="@id/readingbookLayout"
             android:background="@drawable/blue_border_rounded_cornwe"
 
 
             >
 
             <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/Playing"
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -247,10 +253,10 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/watchingmovies"
+            android:id="@+id/watchingmoviesLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/coding"
+            android:layout_below="@id/codingLayout"
             android:layout_margin="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
@@ -259,6 +265,7 @@
             >
 
             <com.google.android.material.checkbox.MaterialCheckBox
+                android:id="@+id/movies"
                 android:layout_width="170dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
@@ -266,14 +273,14 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/traveling"
+            android:id="@+id/travelingLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/coding"
+            android:layout_below="@id/codingLayout"
             android:layout_margin="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:layout_toRightOf="@id/watchingmovies"
+            android:layout_toRightOf="@id/watchingmoviesLayout"
             android:background="@drawable/blue_border_rounded_cornwe"
 
 
@@ -282,6 +289,7 @@
             <com.google.android.material.checkbox.MaterialCheckBox
                 android:layout_width="100dp"
                 android:layout_height="wrap_content"
+                android:id="@+id/traveling"
                 android:gravity="center"
                 android:text="Traveling" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -290,7 +298,7 @@
             android:id="@+id/submit"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_below="@id/watchingmovies"
+            android:layout_below="@id/watchingmoviesLayout"
             android:layout_marginStart="60dp"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="60dp"
