--- a/app/src/main/res/layout/activity_user_information.xml
+++ b/app/src/main/res/layout/activity_user_information.xml
@@ -8,16 +8,14 @@
     android:layout_height="match_parent"
     tools:context=".UserInformation">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        >
+
 
         <com.google.android.material.textview.MaterialTextView
+
             android:layout_width="match_parent"
             android:layout_height="700dp"
-            android:id="@+id/output"
+            android:layout_margin="20dp"
+            android:id="@+id/info"
             android:padding="20dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
@@ -31,7 +29,7 @@
 
 
 
-    </com.google.android.material.textfield.TextInputLayout>
+
 
 
 
