--- a/app/src/main/res/layout/activity_user_information.xml
+++ b/app/src/main/res/layout/activity_user_information.xml
@@ -9,22 +9,23 @@
     tools:context=".UserInformation">
 
 
-
         <com.google.android.material.textview.MaterialTextView
 
+            android:id="@+id/info"
             android:layout_width="match_parent"
             android:layout_height="700dp"
-            android:layout_margin="20dp"
-            android:id="@+id/info"
-            android:padding="20dp"
+            android:layout_marginStart="20dp"
             android:layout_marginLeft="10dp"
+            android:textSize="18sp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="20dp"
             android:layout_marginRight="10dp"
             android:layout_marginBottom="20dp"
+
+
             android:background="@drawable/blue_border_rounded_cornwe2"
             android:hint="Users Information"
-
-
-            />
+            android:padding="20dp" />
 
 
 
