--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -177,15 +177,21 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_below="@id/radiobutton"
-            android:layout_margin="10dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/blue_border_rounded_cornwe"
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:background="@drawable/blue_border_rounded_cornwe1"
             android:gravity="center">
 
             <com.google.android.material.textview.MaterialTextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Hobbies"></com.google.android.material.textview.MaterialTextView>
+                android:text="Hobbies"
+                android:textColor="@color/white"
+                >
+
+            </com.google.android.material.textview.MaterialTextView>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -300,6 +306,8 @@
             android:layout_height="60dp"
             android:layout_below="@id/watchingmoviesLayout"
             android:layout_marginStart="60dp"
+            android:textColor="@color/white"
+            android:backgroundTint="@color/black"
             android:layout_marginTop="30dp"
             android:layout_marginEnd="60dp"
             android:layout_marginBottom="60dp"
