--- a/app/src/main/res/drawable/blue_border_rounded_cornwe1.xml
+++ b/app/src/main/res/drawable/blue_border_rounded_cornwe1.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#00000000"
+    <solid
+        android:color="@color/black"
         />
-    <stroke android:color="#FFBB86FC" android:width="1.3dp"/>
+    <stroke android:color="@color/black" android:width="1.3dp"/>
     <corners android:radius="25dp"/>
 </shape>
