--- a/app/src/main/res/layout/activity_user_information.xml
+++ b/app/src/main/res/layout/activity_user_information.xml
@@ -2,27 +2,17 @@
 <RelativeLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".UserInformation">
-
-
         <com.google.android.material.textview.MaterialTextView
-
             android:id="@+id/info"
             android:layout_width="match_parent"
             android:layout_height="700dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="10dp"
             android:textSize="18sp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="20dp"
-
-
+            android:layout_margin="10dp"
+            android:textColor="@color/black"
             android:background="@drawable/blue_border_rounded_cornwe2"
             android:hint="Users Information"
             android:padding="20dp" />
