--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -20,6 +20,7 @@
 
         >
     </com.google.android.material.textview.MaterialTextView>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/skip"
         android:layout_width="wrap_content"
@@ -36,15 +37,41 @@
         app:layout_constraintTop_toBottomOf="@id/signUpText"
         >
 
+
     </com.google.android.material.button.MaterialButton>
+
+   <com.google.android.material.textfield.TextInputLayout
+       android:id="@+id/usertypedata"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:paddingLeft="30dp"
+       app:prefixText="User Type"
+       app:layout_constraintTop_toBottomOf="@+id/skip"
+       android:layout_marginTop="20dp"
+       >
+       <Spinner
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:id="@+id/spinner"
+           android:layout_marginLeft="100dp"
+           app:layout_constraintTop_toTopOf="parent"
+           android:spinnerMode="dialog"
+           android:visibility="visible"/>
+
+   </com.google.android.material.textfield.TextInputLayout>
+
+
+
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/username"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/skip"
+        android:weightSum="0.5"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/usertypedata"
         app:startIconDrawable="@drawable/baseline_person_24"
         android:gravity="center"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"
@@ -63,14 +90,16 @@
     <com.google.android.material.textfield.TextInputLayout
 
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:weightSum="0.5"
         android:layout_toRightOf="@+id/username"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/skip"
+        app:layout_constraintTop_toBottomOf="@id/usertypedata"
         android:gravity="center"
-        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">
+        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded"
+        >
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/Lastname"
@@ -93,8 +122,7 @@
         app:counterEnabled="true"
         app:counterMaxLength="10"
         android:layout_marginTop="20dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
+        android:layout_margin="5dp"
         app:prefixText="+91"
         app:startIconDrawable="@drawable/baseline_phone_24"
         app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">
@@ -102,7 +130,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:maxLength="10"
             android:id="@+id/Phone1"
             android:inputType="phone"
