--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,16 +8,33 @@
     android:layout_height="wrap_content"
     tools:context=".MainActivity">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/profile_image"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="10dp"
+            app:srcCompat="@drawable/profile"
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView"/>
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/username"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="190dp"
             android:layout_height="wrap_content"
+
+            android:layout_below="@+id/profile_image"
             android:layout_marginStart="10dp"
+            app:layout_constraintTop_toBottomOf="@+id/profile_image"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
@@ -40,6 +57,9 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/profile_image"
+            android:layout_below="@+id/profile_image"
             android:layout_toRightOf="@+id/username"
             android:gravity="center"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">
@@ -57,10 +77,12 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/Phone"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+            app:layout_constraintTop_toBottomOf="@+id/username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/username"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:layout_marginTop="10dp"
             app:counterEnabled="true"
             app:counterMaxLength="10"
@@ -84,14 +106,16 @@
             android:id="@+id/PhoneA"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
+            app:layout_constraintTop_toBottomOf="@+id/Phone"
             android:layout_height="wrap_content"
             android:layout_below="@+id/Phone"
             app:startIconDrawable="@drawable/baseline_phone_24"
-            android:layout_margin="10dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             app:counterEnabled="true"
             app:counterMaxLength="10"
             app:prefixText="+91"
-            android:layout_marginTop="10dp"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -108,11 +132,11 @@
             android:id="@+id/emaillayout"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
+            app:layout_constraintTop_toBottomOf="@id/PhoneA"
             android:layout_height="wrap_content"
             android:layout_below="@+id/PhoneA"
             android:layout_margin="10dp"
             app:startIconDrawable="@drawable/baseline_email_24"
-            android:layout_marginTop="10dp"
             app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -128,10 +152,12 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/radiobutton"
             android:layout_width="match_parent"
+            app:layout_constraintTop_toBottomOf="@id/emaillayout"
             android:layout_height="wrap_content"
             android:layout_below="@id/emaillayout"
-            android:layout_margin="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/blue_border_rounded_cornwe">
 
             <RadioGroup
@@ -177,7 +203,9 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_below="@id/radiobutton"
-            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toBottomOf="@id/radiobutton"
+
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
@@ -198,15 +226,17 @@
             android:id="@+id/codingLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/hobbies"
+            app:layout_constraintTop_toBottomOf="@+id/hobbies"
             android:layout_margin="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+
             android:layout_marginTop="10dp"
             >
 
             <com.google.android.material.checkbox.MaterialCheckBox
                 android:id="@+id/Coding"
                 android:layout_width="100dp"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:gravity="center"
                 android:text="B-Tech" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -215,11 +245,13 @@
             android:id="@+id/readingbookLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/hobbies"
+            app:layout_constraintLeft_toRightOf="@id/codingLayout"
             android:layout_below="@id/hobbies"
             android:layout_margin="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
-            android:layout_toRightOf="@id/codingLayout"
+
             >
 
             <com.google.android.material.checkbox.MaterialCheckBox
@@ -235,6 +267,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/hobbies"
+            app:layout_constraintTop_toBottomOf="@id/hobbies"
+            app:layout_constraintLeft_toRightOf="@id/readingbookLayout"
             android:layout_margin="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
@@ -254,6 +288,8 @@
             android:id="@+id/watchingmoviesLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/codingLayout"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_below="@id/codingLayout"
             android:layout_margin="10dp"
             android:layout_marginTop="10dp"
@@ -273,6 +309,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/codingLayout"
+            app:layout_constraintTop_toBottomOf="@id/codingLayout"
+            app:layout_constraintLeft_toRightOf="@id/watchingmoviesLayout"
             android:layout_margin="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginRight="10dp"
@@ -291,7 +329,7 @@
             android:id="@+id/submit"
             android:layout_width="match_parent"
             android:layout_height="60dp"
-            android:layout_below="@id/watchingmoviesLayout"
+            app:layout_constraintTop_toBottomOf="@id/watchingmoviesLayout"
             android:layout_marginStart="60dp"
             android:textColor="@color/white"
             android:backgroundTint="@color/black"
@@ -304,6 +342,6 @@
         </com.google.android.material.button.MaterialButton>
 
 
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
