--- a/app/src/main/res/layout/layoutitems.xml
+++ b/app/src/main/res/layout/layoutitems.xml
@@ -12,6 +12,7 @@
         >
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:id="@+id/layout"
         android:layout_height="match_parent"
         android:padding="5dp">
 
