--- a/app/src/main/res/drawable/blue_border_rounded_cornwe1.xml
+++ b/app/src/main/res/drawable/blue_border_rounded_cornwe1.xml
@@ -2,8 +2,8 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid
-        android:color="@color/black"
+        android:color="#FFFFFF"
         />
-    <stroke android:color="@color/black" android:width="1.3dp"/>
+    <stroke android:color="#ACACAC" android:width="1.3dp"/>
     <corners android:radius="25dp"/>
 </shape>
