--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/username"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="190dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
 
                 android:layout_below="@+id/profile_image"
@@ -60,7 +60,7 @@
             <com.google.android.material.textfield.TextInputLayout
 
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-                android:layout_width="180dp"
+                android:layout_width="150dp"
                 android:id="@+id/UserLastname"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
@@ -211,7 +211,6 @@
                 android:layout_height="40dp"
                 android:layout_below="@id/radiobutton"
                 app:layout_constraintTop_toBottomOf="@id/radiobutton"
-
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="30dp"
@@ -223,7 +222,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Course"
-                    android:textColor="@color/white">
+                    android:textStyle="bold"
+                    android:textColor="@color/black">
 
                 </com.google.android.material.textview.MaterialTextView>
             </com.google.android.material.textfield.TextInputLayout>
