--- a/app/src/main/res/layout/layoutitems.xml
+++ b/app/src/main/res/layout/layoutitems.xml
@@ -6,13 +6,10 @@
 
     </data>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:padding="5dp">
 
         <TextView
@@ -50,9 +47,45 @@
             app:layout_constraintStart_toStartOf="parent"
             >
         </TextView>
+        <TextView
+            android:id="@+id/AlterPhone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textSize="16dp"
+            android:text="Alternative Phone"
+            android:layout_marginLeft="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/Phone"
+            app:layout_constraintStart_toStartOf="parent"
+            >
+        </TextView>
+        <TextView
+            android:id="@+id/Gmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textSize="16dp"
+            android:text="Email"
+            android:layout_marginLeft="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/AlterPhone"
+            app:layout_constraintStart_toStartOf="parent"
+            >
+        </TextView>
+        <TextView
+            android:id="@+id/Gender"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textSize="16dp"
+            android:text="Email"
+            android:layout_marginLeft="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/Gmail"
+            app:layout_constraintStart_toStartOf="parent"
+            >
+        </TextView>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</ScrollView>
+
 </layout>
