--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,18 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView" />
 
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/usertype"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                android:hint="Guest"
+                android:layout_marginTop="10dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/profile_image"
+
+                />
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/username"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
@@ -39,7 +51,7 @@
 
                 android:layout_below="@+id/profile_image"
                 android:layout_marginStart="10dp"
-                app:layout_constraintTop_toBottomOf="@+id/profile_image"
+                app:layout_constraintTop_toBottomOf="@+id/usertype"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
@@ -65,7 +77,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/profile_image"
+                app:layout_constraintTop_toBottomOf="@+id/usertype"
                 android:layout_below="@+id/profile_image"
                 android:layout_toRightOf="@+id/username"
                 android:gravity="center"
@@ -210,6 +222,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:layout_below="@id/radiobutton"
+                android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@id/radiobutton"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="10dp"
@@ -233,6 +246,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/hobbies"
+                android:visibility="gone"
                 android:layout_margin="10dp"
                 app:layout_constraintStart_toStartOf="parent"
 
@@ -250,6 +264,7 @@
                 android:id="@+id/readingbookLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@id/hobbies"
                 app:layout_constraintLeft_toRightOf="@id/codingLayout"
                 android:layout_below="@id/hobbies"
@@ -271,6 +286,7 @@
                 android:id="@+id/playingLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_below="@id/hobbies"
                 app:layout_constraintTop_toBottomOf="@id/hobbies"
                 app:layout_constraintLeft_toRightOf="@id/readingbookLayout"
@@ -293,6 +309,7 @@
                 android:id="@+id/watchingmoviesLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@id/codingLayout"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_below="@id/codingLayout"
@@ -312,6 +329,7 @@
                 android:id="@+id/travelingLayout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:visibility="gone"
                 android:layout_below="@id/codingLayout"
                 app:layout_constraintTop_toBottomOf="@id/codingLayout"
                 app:layout_constraintLeft_toRightOf="@id/watchingmoviesLayout"
