--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -26,6 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
+        android:visibility="gone"
         android:layout_marginTop="0dp"
         android:text="Skip"
         android:textColor="@color/black"
@@ -79,7 +80,7 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/Firstname"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_margin="10dp"
             android:inputType="textCapSentences"
             android:layout_height="wrap_content"
@@ -104,7 +105,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/Lastname"
             android:layout_margin="10dp"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:inputType="textCapSentences"
             android:hint="Last Name"
