--- a/app/src/main/res/layout/layoutitems.xml
+++ b/app/src/main/res/layout/layoutitems.xml
@@ -7,85 +7,88 @@
     </data>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp">
-
-        <TextView
-            android:id="@+id/fname"
-            android:layout_width="wrap_content"
+        android:layout_margin="5dp"
+        app:cardCornerRadius="30dp"
+        android:backgroundTint="#A6A6A6">
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:text="First Name"
-            android:layout_marginLeft="5dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            >
+            android:padding="5dp">
+            <TextView
+                android:id="@+id/fname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="First Name"
+                android:textSize="18dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-        </TextView>
+            </TextView>
 
-        <TextView
-            android:id="@+id/Lname"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:text="Last Name"
-            android:layout_marginLeft="5dp"
-            app:layout_constraintLeft_toRightOf="@+id/fname"
-            app:layout_constraintTop_toTopOf="parent"
-            >
-        </TextView>
-        <TextView
-            android:id="@+id/Phone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16dp"
-            android:text="Phone"
-            android:layout_marginLeft="5dp"
-            app:layout_constraintTop_toBottomOf="@+id/Lname"
-            app:layout_constraintStart_toStartOf="parent"
-            >
-        </TextView>
-        <TextView
-            android:id="@+id/AlterPhone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:textSize="16dp"
-            android:text="Alternative Phone"
-            android:layout_marginLeft="5dp"
-            app:layout_constraintTop_toBottomOf="@+id/Phone"
-            app:layout_constraintStart_toStartOf="parent"
-            >
-        </TextView>
-        <TextView
-            android:id="@+id/Gmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:textSize="16dp"
-            android:text="Email"
-            android:layout_marginLeft="5dp"
-            app:layout_constraintTop_toBottomOf="@+id/AlterPhone"
-            app:layout_constraintStart_toStartOf="parent"
-            >
-        </TextView>
-        <TextView
-            android:id="@+id/Gender"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:textSize="16dp"
-            android:text="Email"
-            android:layout_marginLeft="5dp"
-            app:layout_constraintTop_toBottomOf="@+id/Gmail"
-            app:layout_constraintStart_toStartOf="parent"
-            >
-        </TextView>
+            <TextView
+                android:id="@+id/Lname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="Last Name"
+                android:textSize="18dp"
+                app:layout_constraintLeft_toRightOf="@+id/fname"
+                app:layout_constraintTop_toTopOf="parent">
+            </TextView>
+
+            <TextView
+                android:id="@+id/Phone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="50dp"
+                android:text="Phone"
+                android:textSize="18dp"
+                app:layout_constraintLeft_toRightOf="@+id/Lname"
+                app:layout_constraintTop_toTopOf="parent">
+            </TextView>
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/AlterPhone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:text="Alternative Phone"
+                android:textSize="20dp"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/Phone"></TextView>
 
+            <TextView
+                android:id="@+id/Gmail"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:text="Email"
+                android:textSize="20dp"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/AlterPhone"></TextView>
 
+            <TextView
+                android:id="@+id/Gender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="5dp"
+                android:text="Email"
+                android:textSize="16dp"
+                android:visibility="gone"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/Gmail"></TextView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 </layout>
