--- a/app/src/main/res/layout/activity_student_info.xml
+++ b/app/src/main/res/layout/activity_student_info.xml
@@ -17,6 +17,8 @@
             android:layout_height="match_parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:clipToPadding="false"
+            android:layout_marginTop="5dp"
             app:layout_constraintTop_toTopOf="parent">
 
         </ListView>
